# TaskAthleteCLI

./: Cargo.toml  README.md  default.nix  shell.nix
src/: cli.rs  handlers.rs  main.rs  output.rs
